# galan_cpp

./: MANIFEST  Makefile.am  README  TODO  autocvs  configure.in  dgrep  galan-config.in  galan.spec.in  macos-configure.sh
doc/: Doxyfile  Info.plist.in  Makefile  Makefile.am  qtgalan.icns
doc/manual/: Makefile.am  galan-style.css  galandoc.dtd.in  index.xml  userguide.xml  webdoc.dsl  xform-classes.dsl
include/: MainWindow.h  TEMPLATE.h  clock.h  event.h  generator.h  global.h  iomanager.h  macro.h  model.h  msgbox.h  opossum.h  plugin.h  ref.h  registry.h  sample.h  xmldict.h
plugins/: Makefile.am  OssOutput.cc  TEMPLATE.cc  Test.cc
src/: MainWindow.cc  Makefile.am  clock.cc  event.cc  generator.cc  iomanager.cc  macro.cc  main.cc  model.cc  msgbox.cc  opossum.cc  plugin.cc  registry.cc  variable.cc
src/galan/: Makefile.am  clock.cc  clock.h  controller.cc  controller.h  event.cc  event.h  generator.cc  generator.h  global.h  iomanager.cc  iomanager.h  macro.cc  macro.h  main.cc  model.cc  model.h  msgbox.cc  plugin.cc  plugin.h  registry.cc  registry.h  sample.h
src/plugins/: Controllers.cc  Delay.cc  Gain.cc  MacOutput.cc  Makefile.am  OssOutput.cc  Test.cc  VCO.cc  Vorbis.cc
src/qtgalan/: IconLinkEditor.cc  IconLinkEditor.h  IconLinkEditor.ui  Makefile.am  PluginInfo.cc  PluginInfo.h  PluginInfo.ui  SelectClock.cc  SelectClock.h  SelectClock.ui  controlpanel.cc  controlpanel.h  defaultclock.cc  defaultclock.h  helpwindow.cc  helpwindow.h  itemhandle.cc  itemhandle.h  itemicon.cc  itemicon.h  itemlink.cc  itemlink.h  ltdb  macroview.cc  macroview.h  main.cc  mainwin.cc  mainwin.h  popupdialog.cc  popupdialog.h  qtio.cc  qtio.h  regsel.cc  regsel.h  regtree.cc  regtree.h
tests/: Makefile.am  opossum.1.test  opossum.2.test  testfns.cc  testopossum.cc  testref.cc  testreg.cc
