dnl -*- shell-script -*-
dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/galan/global.h)
AM_INIT_AUTOMAKE(galan, 0.4.0)
AM_CONFIG_HEADER(config.h)

dnl Program checks
AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_CXX

dnl Libtool for libgalan.so and the plugin modules
AC_LIBTOOL_DLOPEN
AM_DISABLE_STATIC
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

dnl Library checks

dnl Header-file checks
AC_HEADER_STDC

dnl Checks for the optional plugins
dnl ===========================================================================

AC_SUBST(OPTIONAL_PLUGINS)
OPTIONAL_PLUGINS=

dnl AC_CHECK_HEADER(esd.h, OPTIONAL_PLUGINS="${OPTIONAL_PLUGINS} esd_output.so")

dnl Feature tests
dnl ===========================================================================

AC_MSG_CHECKING(for \$QTDIR)
if test "x$QTDIR" = "x"; then
    AC_MSG_ERROR(\$QTDIR not set - please set it to where you installed Qt v2.x)
fi
AC_SUBST(QTDIR)
AC_MSG_RESULT($QTDIR)

AM_PATH_GLIB(1.2.0, , AC_MSG_ERROR(Cannot find glib: is glib-config in path?), gmodule)

dnl Only use -Wall if we have gcc
AC_MSG_CHECKING(to see if we want to use GCC specific compiler flags)
if test "x$GCC" = "xyes"; then
  AC_MSG_RESULT([yes, we do])
  if test -z "`echo "$CFLAGS" | grep "\-Wall" 2> /dev/null`" ; then
    CFLAGS="$CFLAGS -Wall"
  fi
else
  AC_MSG_RESULT([no, we\'re not using GCC])
fi

AC_OUTPUT(
    Makefile
    src/Makefile
    src/galan/Makefile
    src/plugins/Makefile
    src/qtgalan/Makefile
    tests/Makefile
    galan.spec
    galan-config
)
